Fix playlist (list) meta overlap with name

--- a/src/style-guide.less
+++ b/src/style-guide.less
@@ -2387,7 +2387,6 @@ md-menu-item{
           }
 
           &__item{
-            padding-top:@gs;
             font-family:@ff_default;
             font-size:@fs_small;
             margin-right: @gs/2;
@@ -2401,6 +2400,7 @@ md-menu-item{
 
           &--top{
             margin-bottom: 0;
+            display: flex;
           }
 
           &--bottom{
